include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gconf-editor
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = figures/entry-blank.png   \
              figures/entry-bool.png    \
              figures/entry-list.png    \
              figures/entry-number.png  \
              figures/entry-schema.png  \
              figures/entry-string.png  \
			  figures/gconf_editor_anno_window.png

DOC_LINGUAS = ca cs de el en_GB es eu fr it oc pt_BR ru sl sv th uk zh_CN zh_HK zh_TW

man_MANS = gconf-editor.1

EXTRA_DIST = $(man_MANS)
